{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 34,
  "lineage": "78a59c7e-0413-253b-d053-26d10c8b6c92",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internetip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "9090",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-14T10:02:30.001-07:00",
            "deny": [],
            "description": "allow internetip",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/jenkins-353310/global/firewalls/harindra-11-firewall-ingress-internetip",
            "log_config": [],
            "name": "harindra-11-firewall-ingress-internetip",
            "network": "https://www.googleapis.com/compute/v1/projects/jenkins-353310/global/networks/harindra-11-test-vpc",
            "priority": 1000,
            "project": "jenkins-353310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jenkins-353310/global/firewalls/harindra-11-firewall-ingress-internetip",
            "source_ranges": [
              "117.0.0.0/8",
              "49.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "testing-11"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.vm_instance",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-14T10:02:30.029-07:00",
            "deny": [],
            "description": "allow ssh",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/jenkins-353310/global/firewalls/mahesh-11-firewall-ingress-allow-iap",
            "log_config": [],
            "name": "mahesh-11-firewall-ingress-allow-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/jenkins-353310/global/networks/harindra-11-test-vpc",
            "priority": 1000,
            "project": "jenkins-353310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jenkins-353310/global/firewalls/mahesh-11-firewall-ingress-allow-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "testing-11"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.vm_instance",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-pro-cloud/global/images/ubuntu-pro-2004-focal-v20220610",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/jenkins-353310/zones/us-east1-b/disks/test-vm-11"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/jenkins-353310/zones/us-east1-b/instances/test-vm-11",
            "instance_id": "4279774286136541686",
            "label_fingerprint": "9lAqPVcDkz0=",
            "labels": {
              "pgserver": "true"
            },
            "machine_type": "f1-micro",
            "metadata_fingerprint": "PWZlouik0J0=",
            "metadata_startup_script": "apt update -y\r\ncurl -fsSL https://get.docker.com -o get-docker.sh\r\nsh get-docker.sh\r\nsudo systemctl start docker\r\ndocker run -dit -p 9090:9090 --name prometheus prom/prometheus\r\ndocker run -dit -p 3000:3000 --name grafana grafana/grafana\r\ndocker run -dit -p 8080:8080 --name jenkins jenkins/jenkins\r\ndocker start prometheus grafana jenkins\r\n",
            "name": "test-vm-11",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.138.195.206",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/jenkins-353310/global/networks/harindra-11-test-vpc",
                "network_ip": "10.42.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/jenkins-353310/regions/us-east1/subnetworks/harindra-11-vpc-subnetwork",
                "subnetwork_project": "jenkins-353310"
              }
            ],
            "project": "jenkins-353310",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/jenkins-353310/zones/us-east1-b/instances/test-vm-11",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "test-11"
            ],
            "tags_fingerprint": "D53QAX7HhCM=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/jenkins-353310/global/networks/harindra-11-test-vpc",
            "mtu": 1460,
            "name": "harindra-11-test-vpc",
            "project": "jenkins-353310",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jenkins-353310/global/networks/harindra-11-test-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-14T10:02:02.514-07:00",
            "gateway_address": "10.42.0.1",
            "id": "projects/jenkins-353310/regions/us-east1/subnetworks/harindra-11-vpc-subnetwork",
            "ip_cidr_range": "10.42.0.0/16",
            "name": "harindra-11-vpc-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/jenkins-353310/global/networks/harindra-11-test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "jenkins-353310",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/jenkins-353310/regions/us-east1/subnetworks/harindra-11-vpc-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}